SCT-9383: Convert HttpUtils to use new Java 11 HTTPClient library.