@@ -3,18 +3,21 @@ package com.gemalto.chaos.util;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
 import java.net.InetAddress;
-import java.net.URL;
+import java.net.URI;
 import java.net.UnknownHostException;
-import java.util.stream.Collectors;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class HttpUtils {
     private static final Logger log = LoggerFactory.getLogger(HttpUtils.class);
+    private static final HttpClient client;
+
+    static {
+        client = HttpClient.newBuilder().build();
+    }
 
     private HttpUtils () {
     }
@@ -46,13 +49,15 @@ public class HttpUtils {
 
     public static String curl (String url, boolean suppressErrors) {
         try {
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
-            connection.setRequestMethod("GET");
-            InputStream response = connection.getInputStream();
-            return new BufferedReader(new InputStreamReader(response)).lines().collect(Collectors.joining("\n"));
+            HttpRequest request = HttpRequest.newBuilder(URI.create(url)).build();
+            return client.send(request, HttpResponse.BodyHandlers.ofString()).body();
         } catch (IOException e) {
             if (suppressErrors) return null;
             log.error("Exception when polling {}", url, e);
+            return null;
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            log.error("Interrupted when polling {}", url, e);
             return null;
         }
     }
